--- a/Day01-15/07.字符串和常用数据结构.md
+++ b/Day01-15/07.字符串和常用数据结构.md
@@ -165,7 +165,7 @@ for index, elem in enumerate(list1):
 list1 = [1, 3, 5, 7, 100]
 # 添加元素
 list1.append(200)
-list1.insert(1, 400)
+list1.insert(1, 400)    #insert()函数用于将指定对象插入列表的指定位置
 # 合并两个列表
 # list1.extend([1000, 2000])
 list1 += [1000, 2000]
@@ -212,6 +212,7 @@ list2 = sorted(list1)
 # sorted函数返回列表排序后的拷贝不会修改传入的列表
 # 函数的设计就应该像sorted函数一样尽可能不产生副作用
 list3 = sorted(list1, reverse=True)
+#reverse参数设置为True将字母表顺序反转
 # 通过key关键字参数指定根据字符串长度进行排序而不是默认的字母表顺序
 list4 = sorted(list1, key=len)
 print(list1)
@@ -230,8 +231,12 @@ print(list1)
 ```Python
 f = [x for x in range(1, 10)]
 print(f)
+#输出[1, 2, 3, 4, 5, 6, 7, 8, 9]
 f = [x + y for x in 'ABCDE' for y in '1234567']
 print(f)
+#输出
+"""['A1', 'A2', 'A3', 'A4', 'A5', 'A6', 'A7', 'B1', 'B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'C1', 'C2', 'C3', 'C4', 'C5', 'C6', 'C7', 'D1', 'D2', 'D3', 'D4', 'D5', 'D6', 'D7', 'E1', 'E2', 'E3', 'E4', 'E5', 'E6', 'E7']"""
+
 # 用列表的生成表达式语法创建列表容器
 # 用这种语法创建列表之后元素已经准备就绪所以需要耗费较多的内存空间
 f = [x ** 2 for x in range(1, 1000)]
