--- a/Day01-15/07.字符串和常用数据结构.md
+++ b/Day01-15/07.字符串和常用数据结构.md
@@ -398,7 +398,7 @@ print(items1, items2, items3)
 print(scores['骆昊'])
 print(scores['狄仁杰'])
 # 对字典中所有键值对进行遍历
-for key in scores:
+for key in scores:0
     print(f'{key}: {scores[key]}')
 # 更新字典中的元素
 scores['白元芳'] = 65
