--- a/Day01-15/07.字符串和常用数据结构.md
+++ b/Day01-15/07.字符串和常用数据结构.md
@@ -411,6 +411,7 @@ print(scores.get('武则天'))
 # get方法也是通过键获取对应的值但是可以设置默认值
 print(scores.get('武则天', 60))
 # 删除字典中的元素
+#popitem()方法返回并删除字典中的最后一对键和值
 print(scores.popitem())
 print(scores.popitem())
 print(scores.pop('骆昊', 100))
