--- a/Day01-15/08.面向对象编程基础.md
+++ b/Day01-15/08.面向对象编程基础.md
@@ -31,6 +31,7 @@ class Student(object):
 
     # __init__是一个特殊方法用于在创建对象时进行初始化操作
     # 通过这个方法我们可以为学生对象绑定name和age两个属性
+    # 相当于java中的this,即隐式操作符
     def __init__(self, name, age):
         self.name = name
         self.age = age
